--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -39,3 +39,15 @@ a {
   font-weight: 500;
   color: #fff;
 }
+
+.App-playlist {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 1020px) {
+  .App-playlist {
+    align-items: center;
+    flex-direction: column;
+  }
+}
